Implements mobile design styles to calendar table (LH-0dde). - Adds horizontal scrolling on table. - Fixes the first column on table. - Sets a smaller font-size following mobile-first methodology.

--- a/src/components/Calendar/calendar.css
+++ b/src/components/Calendar/calendar.css
@@ -28,28 +28,25 @@
   margin-right: auto;
 }
 
+.table-container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 360px;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 .table {
   margin: 0 auto;
 }
 
-.table__row {
-  display: flex;
-  align-items: end;
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-
-.table__row_mb-20 {
-  margin-bottom: 20px;
-}
-
 .table__cell {
-  width: 24px;
-  height: 24px;
-  margin-left: 2px;
-  font-size: 18px;
-  font-weight: 500;
+  padding: 0 4px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   border: 1px solid var(--secondary);
+  font-weight: 500;
+  background-color: var(--primary);
   position: relative;
 }
 
@@ -57,22 +54,18 @@
   border: none;
 }
 
-.table__cell_lg {
-  width: 230px;
+.table__cell__fixed {
+  left: 0;
+  position: sticky;
+  z-index: 1;
 }
 
-.table__cell_pl-2 {
-  padding: 2px;
+.table__cell_flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .table__cell_font-bold {
   font-weight: bold;
-}
-
-.table__cell_text-center {
-  text-align: center;
-}
-
-.table__cell_grid {
-  display: grid;
 }
