--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   font-optical-sizing: auto;
   font-style: normal;
   font-weight: 400;
+  font-size: 16px;
   color: var(--secondary);
   background-color: var(--primary);
 }
